Added custom configuration for volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,8 @@ services:
       CLICKHOUSE_USER: clickhouse
       CLICKHOUSE_PASSWORD: clickhouse # CHANGEME
     volumes:
-      - langfuse_clickhouse_data:/var/lib/clickhouse
-      - langfuse_clickhouse_logs:/var/log/clickhouse-server
+      - ./volumes/langfuse_clickhouse_data:/var/lib/clickhouse
+      - ./volumes/langfuse_clickhouse_logs:/var/log/clickhouse-server
     ports:
       - 127.0.0.1:8123:8123
       - 127.0.0.1:9000:9000
@@ -116,7 +116,7 @@ services:
       - 9090:9000
       - 127.0.0.1:9091:9001
     volumes:
-      - langfuse_minio_data:/data
+      - ./volumes/langfuse_minio_data:/data
     healthcheck:
       test: ["CMD", "mc", "ready", "local"]
       interval: 1s
@@ -153,14 +153,14 @@ services:
     ports:
       - 127.0.0.1:5432:5432
     volumes:
-      - langfuse_postgres_data:/var/lib/postgresql/data
+      - ./volumes/langfuse_postgres_data:/var/lib/postgresql/data
 
-volumes:
-  langfuse_postgres_data:
-    driver: local
-  langfuse_clickhouse_data:
-    driver: local
-  langfuse_clickhouse_logs:
-    driver: local
-  langfuse_minio_data:
-    driver: local
+# volumes:
+#   langfuse_postgres_data:
+#     driver: local
+#   langfuse_clickhouse_data:
+#     driver: local
+#   langfuse_clickhouse_logs:
+#     driver: local
+#   langfuse_minio_data:
+#     driver: local
